--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -59,7 +59,7 @@
             </section>
         </section>
         <section id="imagem_apresentacao">
-            <img src="Neemias Serio!2.png" width="350px">
+            <img src="Minhas fotos/Neemias Serio!2.png" width="350px">
         </section>
 
         <div class="custom-shape-divider-bottom-1689889770"><!--parte da onda do header-->
@@ -74,11 +74,11 @@
     </main>
     <main id="main2">
         <div class="todo_tablet">
-            <img class="tablet" src="tablet.png" width="510px">
-            <img class="tablet2" src="tablet2.png" width="510px">
+            <img class="tablet" src="Minhas fotos/tablet.png" width="510px">
+            <img class="tablet2" src="Minhas fotos/tablet2.png" width="510px">
             
-            <img class="tablet3" src="tablet3.png" width="510px">
-            <img class="tablet4" src="tablet4.png" width="510px">
+            <img class="tablet3" src="Minhas fotos/tablet3.png" width="510px">
+            <img class="tablet4" src="Minhas fotos/tablet4.png" width="510px">
             <div class="fotos">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
