--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <ul class="listras">
                     <ul class="ul_outro_itens2">
                         <li ><a class="sairlistinhas" href="#main" style="--i:1;"><i class='bx bx-x' ></i></a></li>
-                        <li class="sobre_e_habilidades"><a href="#main2" style="--i:2;">Sobre</a></li>
-                        <li class="sobre_e_habilidades"><a href="#main3" style="--i:3;">Habilidade</a></li>
-                        <li class="sobre_e_habilidades"><a href="#main4" style="--i:4;">Contato</a></li>
+                        <li class="sobre_e_habilidades"><a class="SairML" href="#main2" style="--i:2;">Sobre</a></li>
+                        <li class="sobre_e_habilidades"><a class="SairML2"  href="#main3" style="--i:3;">Habilidade</a></li>
+                        <li class="sobre_e_habilidades"><a class="SairML3"  href="#main4" style="--i:4;">Contato</a></li>
                     </ul>
 
             
