--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
     <!--importando biblioteca do swipe-->
-    <title>Document</title>
+    <title>Portifolio Neemias Claudio</title>
 </head>
 
 <body>
