--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             <div class="fotos">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="Minhas fotos/imagem1.jpeg"></div>
-                        <div class="swiper-slide"><img src="Minhas fotos/imagem3.jpeg"></div>
-                        <div class="swiper-slide"><img src="Minhas fotos/imagem2.jpeg"></div>
-                        <div class="swiper-slide"><img src="Minhas fotos/imagem4.jpeg"></div>
-                        <div class="swiper-slide"><img src="Minhas fotos/imagem5.jpeg"></div>
+                        <div class="swiper-slide"><img src="Minhas fotos/imagem1.jpg"></div>
+                        <div class="swiper-slide"><img src="Minhas fotos/imagem2.jpg"></div>
+                        <div class="swiper-slide"><img src="Minhas fotos/imagem3.jpg"></div>
+                        <div class="swiper-slide"><img src="Minhas fotos/imagem4.jpg"></div>
+                        <div class="swiper-slide"><img src="Minhas fotos/imagem5.jpg"></div>
                     </div>
                     <div class="swiper-pagination"></div>
                     <div class="swiper-button-next"></div>
