--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             </p>
         </div>
     </main>
+
+    <main id="video_youtube">
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/lIJBuF8erjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </main>
+
     <main id="main3">
         <h1 class="tituloHabilidades">HABILIDADES</h1>
         <div class="polaroids">
@@ -176,7 +181,7 @@
                         class='bx bxl-instagram'></i></a>
             </div>
             <div class="iconeAnimated">
-                <a href=""><i class='bx bxl-youtube'></i></a>
+                <a href="https://www.youtube.com/@neemiasclaudio2497" target="_blank"><i class='bx bxl-youtube'></i></a>
             </div>
             <div class="iconeAnimated">
                 <a href="https://twitter.com/neemiasclaudio5" target="_blank"><i class='bx bxl-twitter'></i></a>
